<resources>
    <string name="app_name">Rent-It</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="search_tab">Search</string>
    <string name="favorites_tab">Favorites</string>
    <string name="profile_activity">My Profile</string>
    <string name="logout_activity">Logout</string>

    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_profile">My Profile</string>
    <string name="title_view_listing">Item Information</string>
    <!--<string name="dummy_button">Dummy Button</string>-->
    <!--<string name="dummy_content">DUMMY\nCONTENT</string>-->
    <string name="title_activity_main">Rent-It</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="section_format">Hello World from section: %1$d</string>
    <!--<string name="email_str">Email:</string>-->
    <!--<string name="name_str">Name:</string>-->
    <!--<string name="password_str">Password\n(Input twice):</string>-->
    <!--<string name="street_address_str">Street\nAddress:</string>-->
    <string name="register_title_str">Register For Rent-It!</string>
    <!--<string name="address_linetwo_str">Apt/Ste/Unit\nNumber:</string>-->
    <!--<string name="city_str">City:</string>-->
    <!--<string name="state_str">State:</string>-->
    <!--<string name="phone_str">Phone:</string>-->
    <!--<string name="zip_str">Zip:</string>-->
    <string name="submit_button_str">Submit</string>
    <string name="Rentit">Rent-it!</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <!--<string name="password">password</string>-->
    <!--<string name="fill_email">Email</string>-->
    <!--<string name="name">Name</string>-->
    <!--<string name="pw1">Password</string>-->
    <!--<string name="pw2">Password again</string>-->
    <!--<string name="address1">Street Address</string>-->
    <!--<string name="address2">Address 2</string>-->
    <!--<string name="city">City</string>-->
    <!--<string name="state">State</string>-->
    <string name="required_field">* Indicates required field</string>
    <!--<string name="zip">Zip Code</string>-->
    <!--<string name="phone">Phone</string>-->
    <string name="fill_name_hint">Name</string>
    <string name="fill_email_str">Email</string>
    <string name="fill_pw1_str">Password</string>
    <string name="fill_pw2_str">Password again</string>
    <string name="fill_address1_str">Street Address</string>
    <string name="fill_address2_str">Address 2</string>
    <string name="fill_city_str">City</string>
    <string name="fill_zip_str">Zip Code</string>
    <string name="fill_phone_str">Phone</string>

    <!-- profileActivity Strings-->
    <string name="edit_profile">Edit Profile</string>
    <string name="load">loading…</string>
    <string name="contact_info">Contact Info</string>
    <string name="show_email">Email:</string>
    <string name="show_phone">Phone:</string>
    <string name="show_address">Address:</string>
    <string name="show_city">City:</string>
    <string name="show_state_zip">State/Zip:</string>


    <!-- createListingActivity Strings-->
    <string name="title_activity_createListing">New Posting</string>
    <string name="selectImageLoc">Select Image Location</string>
    <string name="itemName_string">Item Name:</string>
    <string name="postAnItem_string">Post an Item</string>
    <string name="bicycle_string">Bicycle</string>
    <string name="examplePrice_string">$20.00</string>
    <string name="addPhotos_cl">Add Photos</string>
    <string name="itemPrice_string">Item Price:</string>
    <string name="charLimit_string">Describe item in 150 characters or less</string>
    <string name="desc_string">Description:</string>
    <string name="category_string">Select Category:</string>
    <string name="finish_string">Finish</string>
    <!--<string name="word10">10</string>-->
    <string name="depositQues_string">Is there a required deposit for this item?</string>
    <string name="ifDepIsReq_string">If yes, please enter the amount. Ex: $10</string>
    <string name="num10">10</string>
    <string name="exclaimYes">Yes!</string>
    <string name="wordNo">No.</string>
    <string name="priceNegotiable">Price negotiable.</string>
    <string name="buyOutright">Item is buy-able.</string>
    <string name="wordAddress">Address:</string>
    <!--<string name="wordOther">Other:</string>-->
    <string name="sayHelloWorld">Hello World</string>
    <string name="minRentDuration">Min Rent Duration:</string>
    <string name="edit_update">Update</string>
    <string name="edit_profile_ef">Edit Profile</string>
    <string name="im_faves">Hello, I\'m the favorites tab!</string>
    <!--<string name="loginFail">loginFail</string>-->
    <!--<string name="badInput">Bad Input</string>-->
    <!--<string name="creationFail">Creation Fail</string>-->
    <string-array name="rentLength_array">
        <item>Select</item>
        <item>Per Hour</item>
        <item>Per Day</item>
        <item>Per Month</item>
    </string-array>

    <string-array name="minRentDur_array">
        <item>Select</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
        <item>Month(s)</item>
    </string-array>

    <string-array name="itemCategories_array">
        <item>Select</item>
        <item>Arts</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Business</item>
        <item>Clothes/Acc</item>
        <item>Electronics</item>
        <item>Equipment</item>
        <item>Furniture</item>
        <item>Health/Beauty</item>
        <item>Photography</item>
        <item>Sporting</item>
        <item>Toys/Games</item>
        <item>Vehicles</item>
        <item>Other</item>
    </string-array>
    <!-- End of createListingActivity Strings-->

    <string-array name="states_array">
        <item>Select:</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <!-- ViewListingActivity Strings -->
    <string name="viewListing_title">MY HOMIES WOODEN STAFF</string>
    <string name="viewListing_description">Ancient and really powerful, does not include gandalf</string>
    <string name="viewListing_price">Price: </string>
    <string name="viewListing_rentduration">Minimum Rent Duration: </string>
    <string name="viewListing_category">Category: </string>
    <string name="viewListing_deposit">Deposit Required: </string>
    <string name="viewListing_buyable">Buyable:</string>
    <string name="viewListing_negotiable">Price Negotiable:</string>
    <string name="viewListing_contact">Contact</string>
    <string name="viewListing_email">Email:</string>
    <string name="viewListing_phone">Phone Number:</string>
    <string name="viewListing_additionalInfo">Additional Contact Info</string>
    <string name="rent_button_str">Rent-It!</string>
    <string name="rentit_toast">Item successfully rented!</string>

    <!-- ViewListingActivity Values to be updated -->
    <string name="viewListing_priceVal">$20</string>
    <string name="viewListing_rentVal">12</string>
    <string name="viewListing_rentTimeVal">Years</string>
    <string name="viewListing_categoryVal">Shit</string>
    <string name="viewListing_depositVal">N/A</string>
    <string name="viewListing_buyableVal">Yes</string>
    <string name="viewListing_negotiableVal">Yes</string>
    <string name="viewListing_emailVal">wheremyring@gmail.com</string>
    <string name="viewListing_phoneVal">666-666-6666</string>
    <string name="viewListing_addInfoVal"></string>
    <string name="yesString">yes</string>
    <string name="add_to_faves">Add to Fave\'s!</string>
    <string name="remove_from_faves">Remove from Fave\'s</string>
    <string name="enterContactInfo">Enter Contact Info:</string>
    <string name="cif_cl">Message me at BBcakes@aol.com or call me whenever at 123-456-7890</string>
    <string name="itemzip">Item Zipcode:</string>
    <string name="zcf_cl">90210</string>
    <string name="pm">Per Month(s)</string>
    <string name="fmm">$15.99</string>
    <string name="ss">Sweg Shades</string>
    <string name="picture">picture</string>
    <string name="nqr">notquitesure</string>


</resources>
